syntax = "proto3";
package com.dspractice.bookstore.commonproto;
option java_multiple_files = true;

message OrderEnqueueRequest {

}

message OrderEnqueueResponse {

}

service OrderQueueService{
  rpc enqueueOrder (OrderEnqueueRequest) returns (OrderEnqueueResponse);
}